# mustermann

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.yml  multi_service.muster  otel-config.yaml  prometheus.yaml  services.muster  services.yml
.github/workflows/: ci.yml  release.yml
examples/: advanced.muster  basic.muster  multi_service.muster  services.muster  specialized.muster
src/: code_gen.rs  config.rs  log_runner.rs  logger.rs  main.rs  metadata_map.rs  otel.rs  printer.rs  runtime_error.rs  telemetry.rs  tracer.rs  visitor.rs  vm.rs  vm_coordinator.rs
src/code_gen/: error.rs  instruction.rs  log_byte_code.rs  mod.rs  service_byte_code.rs
src/parser/: README.md  grammar.pest  mod.rs  tests.rs
src/vm/: mod.rs
