[package]
name = "mustermann"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = {version = "0.3.3", features = ["std", "env-filter"]}
clap = { version = "4.4", features = ["derive"] }
fake = { version = "4", features = ["derive"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["opentelemetry-http", "rt-tokio"] }
tonic = "0.12.3"
opentelemetry-appender-tracing = "0.27"
opentelemetry-stdout = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
ctrlc = "3.4"