[package]
name = "mustermann"
description = "Mustermann is test data for your OpenTelemetry pipeline"
license = "MIT"
authors = ["Jan Schulte <janschulte@fastmail.com>"]
version = "10.0.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
fake = { version = "4", features = ["derive"] }
tracing-opentelemetry = "0.29.0"
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["tonic", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = [
  "rt-tokio",
  "tokio",
  "opentelemetry-http",
] }
tonic = "0.12.3"
opentelemetry-appender-tracing = "0.29.0"
opentelemetry-stdout = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
rand = "0.9.0"
ctrlc = "3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
opentelemetry-semantic-conventions = "0.29.0"
pest = "2.8.0"
pest_derive = "2.8.0"
tabled = "0.18.0"
anyhow = "1.0.97"
